# EverythingAPI

./: LICENSE  README.md  pyproject.toml
everythingapi/: __main__.py
