[tool.poetry]
name = "everythingapi"
version = "0.1.0"
description = ""
authors = ["overflowerror <mail@overflowerror.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.36.1"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
groq = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
